# quick-type-schema

./: Cargo.toml  LICENSE  README.md
examples/: polygot.rs
src/: cli_builder.rs  langs.rs  lib.rs
