[package]
name = "quick-type-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["add_type"]
add_type = ["schemars", "serde_json"]

[dependencies]
json = "0.12.4"
serde_json = { version = "1.0.117", optional = true }
schemars = { version = "0.8.21", optional = true }
