[package]
name = "quick-type-schema"
version = "0.2.0"
edition = "2021"
description = "Generate json schema and language bindings"
repository = "https://github.com/davnotdev/quick-type-schema"
homepage = "https://github.com/davnotdev/quick-type-schema"
license = "BSD-2-Clause"
readme = "./README.md"
keywords = ["quicktype", "code-gen", "jsonschema", "json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["add_type"]
add_type = ["schemars", "serde_json"]

[dependencies]
json = "0.12.4"
serde_json = { version = "1.0.117", optional = true }
schemars = { version = "0.8.21", optional = true }
